--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
+<!DOCTYPE html>
 <html>
-<title>PROJECT</title>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-This is A UI Project
+
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
+
 </body>
 </html>
